# kokoro-tts

./: .env.example  .gitignore  DOCKER_GPU_TROUBLESHOOTING.md  Dockerfile  Dockerfile.benchmark  GPU_PERFORMANCE_REPORT.md  Makefile  QUICK_START.md  README.md  SETUP.md  STREAMING_OPTIMIZATION.md  pyproject.toml  requirements.txt  start.sh  test_kokoro_gpu.py
scripts/: benchmark_tts.py  download_all_models.py  download_mms_models.py  download_models.py  test_kokoro.py  test_simple.py
src/: config.py  main.py
src/core/: service.py
src/engines/: kokoro_engine.py  mms_engine.py
static/: index.html
